--- a/index.css
+++ b/index.css
@@ -1,16 +1,94 @@
 body {
-	background-color: #B2E9FD;
+	background-color: #a82ec0;
 }
 
 .header h2 {
-	color: #DC4247;
+	color: #110410;
 }
 
 .header p {
-	color: #50524F;
+	color: #434441;
 }
 
 .results {
 	margin-top: 20px;
 }
+
+.card {
+	background-color: #a82ec0;
+	margin-left: 1.1em;
+	margin-right: 2em;
+	margin-bottom: 2em;
+	margin-top: 1.1em;
+}
+
+.card-img-top {
+	border: 2.5px solid black;
+	padding: 2.5px;
+	border-image: round;
+	opacity: 1;
+}
+.card-img-top:hover {
+	opacity: 0.92;
+	-moz-box-shadow: 0 0 10px rgb(36, 35, 35);
+    -webkit-box-shadow: 0 0 10px rgb(36, 35, 35);
+    box-shadow: 0 0 10px rgb(36, 35, 35);
+	transform: scale(1.3);
+}
+
+.card-title {
+	text-align: center;
+}
+
+.card-body {
+	border: 2px solid #110410;
+	border-radius: 10px;
+	background-color: silver;
+}
+
+.card-body:hover {
+	opacity: 0.9;
+	-moz-box-shadow: 0 0 10px rgb(36, 35, 35);
+    -webkit-box-shadow: 0 0 10px rgb(36, 35, 35);
+    box-shadow: 0 0 10px rgb(36, 35, 35);
+	transform: scale(1.3);
+
+}
+
+#card-text-right {
+	text-align: right;
+}
+
+.btn-primary {
+	background-color: black;
+	border: 2px solid #5f196d;
+	color: #aa2bc4; 
+	border-radius: 12px;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.btn-primary:hover {
+	border: 2px solid #5f196d;
+	color: #5f186d;
+	background-color: white;
+	font-size: 1.3em;
+}
+
+.search-bar {
+	border: 2px solid black;
+	border-radius: 30px;
+}
+
+.containerA > div {
+	display: inline-block;
+}
+
+.box-b {
+	float: right;
+}
+
+
+
+
+
 
