--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ body {
 	-moz-box-shadow: 0 0 10px rgb(36, 35, 35);
     -webkit-box-shadow: 0 0 10px rgb(36, 35, 35);
     box-shadow: 0 0 10px rgb(36, 35, 35);
-	transform: scale(1.3);
+	transform: scale(1.2);
 }
 
 .card-title {
@@ -51,7 +51,7 @@ body {
 	-moz-box-shadow: 0 0 10px rgb(36, 35, 35);
     -webkit-box-shadow: 0 0 10px rgb(36, 35, 35);
     box-shadow: 0 0 10px rgb(36, 35, 35);
-	transform: scale(1.3);
+	transform: scale(1.2);
 
 }
 
@@ -85,6 +85,11 @@ body {
 
 .box-b {
 	float: right;
+}
+
+.movies-container {
+	display: flex; 
+	justify-content: space-between;
 }
 
 
